Change data folder path

--- a/predict_main.ipynb
+++ b/predict_main.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Super resolution notebook: prediction part\n",
-    "The slc data we want to use the super resolution on is stored in './data/predict/slc_lr' and the denoised is stored in './data/predict/denoised_lr' "
+    "The slc data we want to use the super resolution on is stored in './data/slc_lr' and the denoised is stored in './data/denoised_lr' "
    ]
   },
   {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,11 +72,18 @@
       "SWINTRANSFORMER network loaded\n",
       "1 image(s) loaded\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cfren/anaconda3/envs/recherche/lib/python3.11/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3526.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
+     ]
     }
    ],
    "source": [
     "# load config\n",
-    "cfg = None\n",
     "with open('./config_base.yaml', 'r') as y_file:\n",
     "    cfg = yaml.load(y_file, Loader=yaml.FullLoader)\n",
     "# load images path and normalization parameters\n",
@@ -98,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
