slight change to adapt training part

--- a/predict_main.ipynb
+++ b/predict_main.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,19 +66,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SWINTRANSFORMER network loaded\n",
-      "1 image(s) loaded\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/cfren/anaconda3/envs/recherche/lib/python3.11/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3526.)\n",
       "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SWINTRANSFORMER network loaded\n",
+      "1 image(s) loaded\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
     "# load images path and normalization parameters\n",
     "im_path,p_lr,p_hr = get_path_param(SR_type,cfg)\n",
     "# load data\n",
-    "test_data = load_test(cfg,im_path,p_lr)\n",
+    "test_data = load_test(cfg, p_lr)\n",
     "# load model\n",
     "model = get_model(cfg,model_name,device)\n",
     "if model_name.lower() != 'bicubic':\n",
